# bet

./: .clinerules  .continuerc.json  .env.example  .gitattributes  .gitignore  .kilocodeignore  .local-llm-phase.json  .rooignore  .roomodes  .roorules  AGENTS.md  ARCHITECTURE.md  CODE_AUDIT.md  FOOTBALL_GOLDEN_CERTIFICATION_BUNDLE_REVIEW.md  FOOTBALL_GOLDEN_VERTICAL_DEEP_REVIEW.md  KILO_FOOTBALL_ALL_PROVIDERS_FINAL_PRODUCTION_CLOSURE.md  KILO_FOOTBALL_GOLDEN_TRUTHFUL_FINAL_CLOSURE.md  KILO_FOOTBALL_GOLDEN_VERTICAL_FINAL_EXECUTION_CLOSURE.md  KILO_FOOTBALL_GOLDEN_VERTICAL_FINAL_PRODUCTION_CLOSURE_V3.md  KILO_FOOTBALL_GOLDEN_VERTICAL_LIVE_FIRST.md  KILO_FOOTBALL_PROVIDER_DECOUPLED_FINAL_CLOSURE.md  KILO_REM-001B_IDENTITY_TEMPORAL_PROMPT (1).md  KILO_REM-002A_LEAN_FOUNDATION_PROMPT_V2.md  KILO_REM-002B_API_SPORTS_FAMILY_ROLLOUT.md  KILO_REM-002B_CLOSURE.md  KILO_REM-002C_API_SPORTS_ENRICHMENT_E4.md  KILO_REM-002C_FB2_EVIDENCE_IDEMPOTENCY_CLOSURE.md  KILO_REM-002C_FB3_EXECUTION_PROOF.md  KILO_REM-002C_FB4_REQUEST_IDENTITY_ALIGNMENT.md  KILO_REM-002C_FB_FINAL_EVIDENCE_VERIFY.md  KILO_REM-002C_FB_VERTICAL_CLOSURE.md  KLUCZE API:  MANIFEST.txt  MIGRATION.md  PIPELINE.md  PIPELINE_REFACTOR_PLAN.md  RAPID_MLX_KILO_PRODUCTION_IMPLEMENTATION.md  README.md  REM-001_CODE_REVIEW_REPORT.md  REM-002B_CODE_REVIEW.md  (+16 more)
.github/: copilot-instructions.md  enhancement-plan.md  multi-agent-architecture.plan.md
.implementation/: KILO_RAPIDMLX_PRODUCTION_IMPLEMENTATION_MASTER_PROMPT.md  KILO_RAPIDMLX_RECOVERY_CONTROLLER_V3.md  KILO_RAPIDMLX_RECOVERY_CONTROLLER_V4.md
.kilo/: CONTEXT_POLICY.md  INDEXING_SETUP.md  SETUP.md  tsconfig.json
.kilo/artifacts/REM-001_REVIEW_BUNDLE/: BASE_COMMIT.txt  GIT_STATUS.txt  REM-001.patch  TEST_OUTPUT.txt  pyproject.toml
.kilo/artifacts/REM-001_REVIEW_BUNDLE/.kilo/artifacts/rem001_espn_football/: live_summary.json
.kilo/artifacts/REM-001_REVIEW_BUNDLE/docs/audits/sports-integrations/2026-06-11/: EVIDENCE_MANIFEST.json  INTEGRATION_MATRIX.md  REMEDIATION_BACKLOG.md
.kilo/artifacts/REM-001_REVIEW_BUNDLE/docs/audits/sports-integrations/2026-06-11/repairs/: REM-001_ESPN_FOOTBALL.md
.kilo/artifacts/REM-001_REVIEW_BUNDLE/src/bet/api_clients/: espn.py
.kilo/artifacts/REM-001_REVIEW_BUNDLE/src/bet/stats/: enrichment.py
.kilo/artifacts/REM-001_REVIEW_BUNDLE/tests/scrapers/: test_espn_client.py  test_espn_football_live.py
.kilocode/: OPTIMAL-MODELS-GUIDE.md  SETUP.md
bet/: __init__.py  orchestrator.py  run_pipeline_unit_tests.py
betting/: README.md
config/: api_keys.example.json  bet-script-operations.json  betting_config.json  betting_config.json.bak  com.rapid-mlx.server.plist  com.rapid-mlx.server.plist.bak-qwen36-27b  football_capabilities.yaml  football_freshness.yaml  football_metrics.yaml  football_routing.yaml  gemini_config.json  lmstudio_config.json  scan_urls.json
(+1694 files in other folders)
