[project]
name = "bet"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
bet = "bet.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
